--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "meriem-portfolio",
+  "name": "sujan-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "aos": "^2.3.4",
+    "framer-motion": "^12.26.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-typed": "^2.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
